--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide stop-swiping">注册页</div>
+                <div class="swiper-slide stop-swiping">
+                    <label for="username">用户名</label>
+                    <input id="username" type="text" placeholder="请输入用户名" class="span3">
+                </div>
                 <div class="swiper-slide stop-swiping">注册成功</div>
         </div>
     </div>
