--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -9,7 +8,7 @@
     <title>bootstrap</title>
     <!-- Bootstrap core CSS -->
    <!-- <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/swiper.3.1.7.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -50,8 +49,64 @@
                     </div>
                 </div>
                 <div class="swiper-slide stop-swiping">
-                    <label for="username">用户名</label>
-                    <input id="username" type="text" placeholder="请输入用户名" class="span3">
+                    <div class="container">
+                        <h1 class="text-center">新用户注册</h1>
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <label for="username" class="col-sm-2 control-label">真实姓名</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="username" placeholder="请输入您的真实姓名">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputEmail" class="col-sm-2 control-label">邮箱</label>
+                                <div class="col-sm-10">
+                                    <input  type="email" class="form-control" id="inputEmail" placeholder="请输入您的电子邮箱地址">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputTel" class="col-sm-2 control-label">手机号</label>
+                                <div class="col-sm-10">
+                                    <input  type="tel" class="form-control" id="inputTel" placeholder="请输入您的手机号">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword1" class="col-sm-2 control-label">设置密码</label>
+                                <div class="col-sm-10">
+                                    <input type="password" class="form-control" id="inputPassword1" placeholder="Password">
+                                </div>
+                            </div>
+                            <!--<div class="form-group">-->
+                                <!--<label for="inputPassword2" class="col-sm-2 control-label">确认密码</label>-->
+                                <!--<div class="col-sm-10  has-success has-feedback">-->
+                                    <!--<input type="password" class="form-control" id="inputPassword2" placeholder="请保持一致密码">-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <div class="form-group has-success has-feedback">
+                                <label class="col-sm-2 control-label" for="inputSuccess2">确认密码</label>
+                                <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputSuccess2" aria-describedby="inputSuccess2Status">
+                                <span class="glyphicon glyphicon-ok form-control-feedback"></span>
+                                <!--<span id="inputSuccess2Status" class="sr-only">(success)</span>-->
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox"> Remember me
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="text-center">
+                                    <button type="submit" class="btn btn-info btn-lg">Sign in</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <div class="swiper-slide stop-swiping">注册成功</div>
         </div>
