--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <ul class="nav pull-right">
-                <li><a href="#" onclick="loginPage()">注册</a> </li>
+            <ul class="nav pull-right nav-pills">
+                <li><a href="#" onclick="loginPage()">首页</a> </li>
+                <li><a href="#" onclick="loginPage()">我要报名</a> </li>
             </ul>
-            <h2>bootstrap<small>boot,strap</small></h2>
+            <h2><em>金领圈<small>JLQ</small></em></h2>
         </div>
 
     </div>
@@ -40,15 +41,39 @@
                 <div class="swiper-slide stop-swiping">
                     <div class="container">
                         <div>
-                            <h1>Bootstrap starter template</h1>
-                            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+                            <h2>金领圈-电影投资的风险控制与商业模式</h2>
+                            <blockquote class="lead">日程：<br>
+                                14:00-14:30 嘉宾签到<br>
+                                14:30-14:50 参会人员自我介绍<br>
+                                14:50-15:50 王佳 易BANK 风控总裁“金融产品创新”<br>
+                                15:50-16:50 冯炜 毕马威合伙人 “金融创新产品的税务政策”<br>
+                                16:50-17:20 张程 北京国税 “金融产品创新的稽查风险”<br>
+                                17:20-17:35 江舟 滴滴税务总监<br>
+                                17:35-18:00 互动交流环节</blockquote>
                         </div>
                         <div>
-                            <a class="btn btn-info btn-lg" href="#" onclick="loginPage()">注册</a>
+                            <p class="lead"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> 活动时间：2015.10.26</p>
+                            <p class="lead">
+                                <h3>
+                                <span class="label label-primary"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> 地点：中关村 理想国际大厦</span>
+                                </h3>
+                            </p>
+                        </div>
+                        <div id="but1" class="text-center">
+                            <a class="btn btn-info btn-lg" href="#" onclick="loginPage()">活动详情</a>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide stop-swiping">
+                <div class="swiper-slide">
+                    1
+                </div>
+                <div class="swiper-slide">
+                    2
+                </div>
+                <div class="swiper-slide">
+                    3
+                </div>
+                <div class="swiper-slide">
                     <div class="container">
                         <h1 class="text-center">新用户注册</h1>
                         <form class="form-horizontal">
