--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <script src="//cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&ak=m9NbZNsf9dK0p87DgDYDDHWr">
+        //v1.5版本的引用方式：src="http://api.map.baidu.com/api?v=1.5&ak=您的密钥"
+        //v1.4版本及以前版本的引用方式：src="http://api.map.baidu.com/api?v=1.4&key=您的密钥&callback=initialize"
+    </script>
 </head>
 
 <body>
@@ -42,7 +46,7 @@
                     <div class="container">
                         <div>
                             <h2>金领圈-电影投资的风险控制与商业模式</h2>
-                            <blockquote class="lead">日程：<br>
+                            <blockquote class="lead bs-callout-warning">日程：<br>
                                 14:00-14:30 嘉宾签到<br>
                                 14:30-14:50 参会人员自我介绍<br>
                                 14:50-15:50 王佳 易BANK 风控总裁“金融产品创新”<br>
@@ -51,24 +55,28 @@
                                 17:20-17:35 江舟 滴滴税务总监<br>
                                 17:35-18:00 互动交流环节</blockquote>
                         </div>
-                        <div>
-                            <p class="lead"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> 活动时间：2015.10.26</p>
-                            <p class="lead">
+                        <div class="lead">
+                            <p >
+                                <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+                                活动时间：2015.10.26
+                            </p>
+                            <p>
                                 <h3>
                                 <span class="label label-primary"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> 地点：中关村 理想国际大厦</span>
                                 </h3>
                             </p>
+
                         </div>
-                        <div id="but1" class="text-center">
+                        <div class="text-center but1">
                             <a class="btn btn-info btn-lg" href="#" onclick="loginPage()">活动详情</a>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide">
+                <div  class="swiper-slide">
                     1
                 </div>
-                <div class="swiper-slide">
-                    2
+                <div id="container" class="swiper-slide">
+
                 </div>
                 <div class="swiper-slide">
                     3
@@ -158,6 +166,14 @@
     function loginPage(){
         mySwiper.slideTo(1);//切换到第一个slide，速度为1秒
     }
+</script>
+
+<script type="text/javascript">
+    var map = new BMap.Map("container");          // 创建地图实例
+    var point = new BMap.Point(116.404, 39.915);  // 创建点坐标
+    map.centerAndZoom(point, 15);                 // 初始化地图，设置中心点坐标和地图级别
+    //var marker = new BMap.Marker(new BMap.Point(116.404, 39.915));
+    map.addOverlay(new BMap.Marker(point));
 </script>
 </body>
 </html>
